--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
             <version>2.32.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- ToDo: extend reports -->
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>5.1.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
